--- a/.github/workflows/generate-deploy-resources.yml
+++ b/.github/workflows/generate-deploy-resources.yml
@@ -60,8 +60,18 @@ jobs:
 
           yamlfix deploy/kubernetes/startpunkt-*.yaml deploy/openshift/startpunkt-*.yaml
 
-      - name: Commit generated resources
-        id: create-pr
+      # Check for actual changes before creating PR
+      - name: Check for changes
+        id: check_changes
+        run: |
+          if git diff --quiet deploy/ src/main/kubernetes/common.yml; then
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create PR
+        if: steps.check_changes.outputs.has_changes == 'true'
         uses: peter-evans/create-pull-request@v7
         with:
           add-paths: |
