--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -38,7 +38,7 @@ on:
   workflow_dispatch: null
 
 concurrency:
-  group: workflow = ${{ github.workflow }}, ref = ${{ github.event.ref }}, pr = ${{github.event.pull_request.id }}
+  group: ${{ github.workflow }}-${{ github.event.ref }}-${{ github.event.pull_request.id }}
   cancel-in-progress: true
 
 jobs:
