--- a/.github/workflows/schedule-codeowners.yml
+++ b/.github/workflows/schedule-codeowners.yml
@@ -1,10 +1,13 @@
 ---
-name: "Codeowners Validator"
+name: Schedule - Codeowners
+permissions:
+  contents: read
 
 on:
   schedule:
     # Runs at 08:00 UTC every day
     - cron: '0 8 * * *'
+  workflow_dispatch:
 
 jobs:
   codeowners:
@@ -12,11 +15,10 @@ jobs:
     steps:
       - name: ⤵️ Check out code from GitHub
         uses: actions/checkout@v5
+
       - name: ✅ GitHub CODEOWNERS Validator
         uses: mszostok/codeowners-validator@v0.7.4
         with:
-          # input parameters
-          # github_access_token: "${{ secrets.OWNERS_VALIDATOR_GITHUB_SECRET }}"
           github_access_token: "${{ secrets.GITHUB_TOKEN }}"
           checks: "files,duppatterns,syntax"
           experimental_checks: "notowned,avoid-shadowing"
