fix: add 'watch' verb to various Kubernetes role bindings for improved resource monitoring
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/deploy/openshift/startpunkt-jvm.yaml
+++ b/deploy/openshift/startpunkt-jvm.yaml
@@ -519,28 +519,28 @@ metadata:
 rules:
   - apiGroups: ['']
     resources: [namespaces]
-    verbs: [get, list]
+    verbs: [get, list, watch]
   - apiGroups: [startpunkt.ullberg.us]
     resources: [applications, bookmarks]
-    verbs: [get, list, create, update, delete]
+    verbs: [get, list, watch, create, update, delete]
   - apiGroups: [networking.k8s.io]
     resources: [ingresses]
-    verbs: [get, list]
+    verbs: [get, list, watch]
   - apiGroups: [route.openshift.io]
     resources: [routes]
-    verbs: [get, list]
+    verbs: [get, list, watch]
   - apiGroups: [hajimari.io]
     resources: [applications, bookmarks]
-    verbs: [get, list]
+    verbs: [get, list, watch]
   - apiGroups: [traefik.io]
     resources: [ingressroutes]
-    verbs: [get, list]
+    verbs: [get, list, watch]
   - apiGroups: [forecastle.stakater.com]
     resources: [forecastleapps]
-    verbs: [get, list]
+    verbs: [get, list, watch]
   - apiGroups: [gateway.networking.k8s.io]
     resources: [httproutes]
-    verbs: [get, list]
+    verbs: [get, list, watch]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
