--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -32,7 +32,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build-and-push-native-images:
+  build-native-images:
     if: |
       github.repository == 'ullbergm/startpunkt' &&
       (
@@ -41,7 +41,14 @@ jobs:
         github.event_name == 'workflow_dispatch'
       )
     runs-on: ubuntu-latest
-    name: "Build and Push Native images"
+    name: "Build and Push Native Images"
+    strategy:
+      matrix:
+        include:
+          - image: monolithic
+            dockerfile: Dockerfile.native-micro
+          - image: backend
+            dockerfile: Dockerfile.backend
     steps:
       - uses: actions/checkout@v5
 
@@ -49,7 +56,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@318604b99e75e41977312d83839a89be02ca4893 # v5.9.0
         with:
-          images: ${{env.IMAGE_FULL_NAME}}
+          images: ${{env.IMAGE_FULL_NAME}}${{ matrix.image != 'monolithic' && format('-{0}', matrix.image) || '' }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -59,7 +66,17 @@ jobs:
           flavor: |
             latest=auto
 
+      - name: Download native executable artifact
+        if: github.event_name == 'workflow_run'
+        uses: actions/download-artifact@v4
+        with:
+          name: native-executable
+          path: target/
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Setup Java
+        if: github.event_name != 'workflow_run'
         uses: actions/setup-java@v5
         with:
           java-version: ${{ env.JAVA_VERSION }}
@@ -67,6 +84,7 @@ jobs:
           cache: maven
 
       - name: Build native executable with Quarkus
+        if: github.event_name != 'workflow_run'
         working-directory: .
         run: |
           ./mvnw -B clean package -DskipTests -Pnative \
@@ -74,8 +92,12 @@ jobs:
             -Dquarkus.http.host=0.0.0.0 \
             -Dquarkus.native.container-build=true \
             -Dquarkus.native.builder-image=${{ env.MANDREL_IMAGE }}:${{ env.MANDREL_VERSION }}-java${{ env.JAVA_VERSION }}-amd64 \
-            -Dquarkus.container-image.build=true \
+            -Dquarkus.container-image.build=false \
             -Dquarkus.container-image.push=false
+
+      - name: Make native executable executable
+        if: github.event_name == 'workflow_run'
+        run: chmod +x target/*-runner
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -95,6 +117,55 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
-          file: ./src/main/docker/Dockerfile.native-micro
+          file: ./src/main/docker/${{ matrix.dockerfile }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  build-frontend:
+    if: |
+      github.repository == 'ullbergm/startpunkt' &&
+      (
+        (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') ||
+        (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) ||
+        github.event_name == 'workflow_dispatch'
+      )
+    runs-on: ubuntu-latest
+    name: "Build and Push Frontend"
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: 📝 Extract Docker metadata for frontend
+        id: meta
+        uses: docker/metadata-action@318604b99e75e41977312d83839a89be02ca4893 # v5.9.0
+        with:
+          images: ${{env.IMAGE_FULL_NAME}}-frontend
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+          flavor: |
+            latest=auto
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+
+      - name: 🔑 Log into registry ${{ env.REGISTRY }}
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 📦 Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          file: ./src/main/docker/Dockerfile.frontend
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
