--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -52,9 +52,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  jvm-sonarcloud-test:
+  build-and-test:
     runs-on: ubuntu-latest
-    name: jvm-sonarcloud-test
+    if: github.repository == 'ullbergm/startpunkt'
+    name: build-and-test
     steps:
       - uses: actions/checkout@v5
         with:
@@ -67,16 +68,17 @@ jobs:
           java-version: '${{ env.JAVA_VERSION }}'
           cache: maven
 
-      - name: Build and test with coverage
-        run: |
-          ./mvnw -B clean verify -Dmaven.compiler.release=${{ env.JAVA_VERSION }}
-
-      - name: Analyze with SonarCloud
+      - name: Build, test, analyze, and build native image
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          ./mvnw -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+          ./mvnw -B -fae clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Pnative \
+            -Dmaven.compiler.release=${{ env.JAVA_VERSION }} \
+            -Dquarkus.http.host=0.0.0.0 \
+            -Dquarkus.native.container-build=true \
+            -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:${{ env.MANDREL_VERSION }}-java${{ env.JAVA_VERSION }}-amd64 \
             -Dsonar.organization=${{ env.SONAR_ORGANIZATION }} \
             -Dsonar.projectKey=${{ env.SONAR_PROJECTKEY }} \
             -Dsonar.host.url=${{ env.SONAR_HOST_URL }}
@@ -85,33 +87,10 @@ jobs:
         if: always()
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
-          check_name: "Test Results - JVM"
+          check_name: "Test Results"
           files: |
             **/target/surefire-reports/*.xml
             **/test-results/jest/*.xml
-
-  native-build-test:
-    runs-on: ubuntu-latest
-    if: github.repository == 'ullbergm/startpunkt'
-    name: native-build-test
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Setup Java
-        uses: actions/setup-java@v5
-        with:
-          distribution: 'temurin'
-          java-version: '${{ env.JAVA_VERSION }}'
-          cache: maven
-
-      - name: 'build-test-native-java-${{ env.JAVA_VERSION }}'
-        working-directory: .
-        run: |
-          ./mvnw -B -fae clean verify -Pnative \
-            -Dquarkus.http.host=0.0.0.0 \
-            -Dmaven.compiler.release=${{ env.JAVA_VERSION }} \
-            -Dquarkus.native.container-build=true \
-            -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel-builder-image:${{ env.MANDREL_VERSION }}-java${{ env.JAVA_VERSION }}-amd64
 
       - name: Upload native executable artifact
         if: success() && github.ref == 'refs/heads/main'
@@ -120,12 +99,3 @@ jobs:
           name: native-executable
           path: target/*-runner
           retention-days: 1
-
-      - name: Publish JUnit test results to GitHub
-        if: always()
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        with:
-          check_name: "Test Results - Native"
-          files: |
-            **/target/surefire-reports/*.xml
-            **/test-results/jest/*.xml
