fix: Update Nginx configuration for environment variable handling
Signed-off-by: Magnus Ullberg <magnus@ullberg.us>

--- a/src/main/docker/nginx.conf
+++ b/src/main/docker/nginx.conf
@@ -14,21 +14,21 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        try_files $uri =404;
+        try_files ${DOLLAR}uri =404;
     }
 
     # Proxy API requests to backend
     location /api/ {
         proxy_pass ${API_BASE_URL}/api/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
+        proxy_set_header Host ${DOLLAR}host;
+        proxy_set_header X-Real-IP ${DOLLAR}remote_addr;
+        proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
+        proxy_cache_bypass ${DOLLAR}http_upgrade;
+
         # CORS headers are handled by backend
         proxy_pass_request_headers on;
     }
@@ -37,15 +37,15 @@ server {
     location /q/ {
         proxy_pass ${API_BASE_URL}/q/;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host ${DOLLAR}host;
+        proxy_set_header X-Real-IP ${DOLLAR}remote_addr;
+        proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
     }
 
     # SPA routing - serve index.html for all non-file requests
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files ${DOLLAR}uri ${DOLLAR}uri/ /index.html;
         add_header Cache-Control "no-cache";
     }
 
