--- a/src/main/docker/Dockerfile.frontend
+++ b/src/main/docker/Dockerfile.frontend
@@ -43,6 +43,7 @@ COPY src/main/docker/nginx.conf /etc/nginx/templates/default.conf.template
 # Create a script to handle environment variable substitution at runtime
 RUN echo '#!/bin/sh' > /docker-entrypoint.d/40-envsubst-on-templates.sh && \
     echo 'export API_BASE_URL=${API_BASE_URL:-http://localhost:8081}' >> /docker-entrypoint.d/40-envsubst-on-templates.sh && \
+    echo 'export DOLLAR="$"' >> /docker-entrypoint.d/40-envsubst-on-templates.sh && \
     echo 'envsubst < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf' >> /docker-entrypoint.d/40-envsubst-on-templates.sh && \
     chmod +x /docker-entrypoint.d/40-envsubst-on-templates.sh
 
