--- a/src/main/docker/nginx.conf
+++ b/src/main/docker/nginx.conf
@@ -17,17 +17,15 @@ server {
         try_files ${DOLLAR}uri =404;
     }
 
-    # Proxy API requests to backend
-    location /api/ {
-        proxy_pass ${API_BASE_URL}/api/;
+    # Proxy GraphQL requests to backend
+    location /graphql {
+        proxy_pass ${API_BASE_URL}/graphql;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host ${DOLLAR}host;
         proxy_set_header X-Real-IP ${DOLLAR}remote_addr;
         proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
-        proxy_cache_bypass ${DOLLAR}http_upgrade;
+        proxy_set_header Content-Type application/json;
 
         # CORS headers are handled by backend
         proxy_pass_request_headers on;
