--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ quarkus.quinoa.build-dir=dist
 # This disables Quinoa's static file serving when running in backend-only mode
 %microservices.quarkus.quinoa.enable-spa-routing=false
 
+# Backend-only mode optimizations
+%microservices.quarkus.swagger-ui.always-include=false
+%microservices.quarkus.log.level=WARN
+%microservices.quarkus.log.category."us.ullberg.startpunkt".level=INFO
+
 quarkus.helm.name=startpunkt
 quarkus.helm.description=Deploy the Startpunkt application
 
@@ -25,8 +30,6 @@ quarkus.http.test-timeout=60s
 
 # HTTP idle timeout for SSE connections (0 = no timeout, keeps connections alive)
 quarkus.http.idle-timeout=0
-
-quarkus.swagger-ui.always-include=true
 
 quarkus.native.additional-build-args=--initialize-at-build-time
 
