--- a/deploy/kubernetes/startpunkt-microservices.yaml
+++ b/deploy/kubernetes/startpunkt-microservices.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/part-of: startpunkt
     app.kubernetes.io/managed-by: quarkus
   name: startpunkt
-  namespace: default
+  namespace: startpunkt
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -25,7 +25,7 @@ metadata:
     app.kubernetes.io/managed-by: quarkus
     app.openshift.io/runtime: quarkus
   name: startpunkt-config
-  namespace: default
+  namespace: startpunkt
 data:
   application.yaml: |-
     startpunkt:
@@ -510,32 +510,52 @@ metadata:
     app.kubernetes.io/part-of: startpunkt
     app.kubernetes.io/version: latest-jvm
   name: startpunkt-role
-  namespace: default
+  namespace: startpunkt
 rules:
-  - apiGroups: ['']
-    resources: [namespaces]
-    verbs: [get, list, watch]
-  - apiGroups: [startpunkt.ullberg.us]
-    resources: [applications, bookmarks]
-    verbs: [get, list, watch, create, update, delete]
-  - apiGroups: [networking.k8s.io]
-    resources: [ingresses]
-    verbs: [get, list, watch]
-  - apiGroups: [route.openshift.io]
-    resources: [routes]
-    verbs: [get, list, watch]
-  - apiGroups: [hajimari.io]
-    resources: [applications, bookmarks]
-    verbs: [get, list, watch]
-  - apiGroups: [traefik.io]
-    resources: [ingressroutes]
-    verbs: [get, list, watch]
-  - apiGroups: [forecastle.stakater.com]
-    resources: [forecastleapps]
-    verbs: [get, list, watch]
-  - apiGroups: [gateway.networking.k8s.io]
-    resources: [httproutes]
-    verbs: [get, list, watch]
+  - verbs:
+      - get
+      - list
+      - watch
+    apiGroups:
+      - ''
+      - extensions
+      - networking.k8s.io
+      - discovery.k8s.io
+    resources:
+      - ingresses
+      - namespaces
+      - endpointslices
+      - routes
+      - nodes
+  - verbs:
+      - get
+      - list
+      - watch
+    apiGroups:
+      - hajimari.io
+    resources:
+      - applications
+      - bookmarks
+  - verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - delete
+    apiGroups:
+      - startpunkt.ullberg.us
+    resources:
+      - applications
+      - bookmarks
+  - verbs:
+      - get
+      - list
+      - watch
+    apiGroups:
+      - gateway.networking.k8s.io
+    resources:
+      - httproutes
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -545,7 +565,7 @@ metadata:
     app.kubernetes.io/part-of: startpunkt
     app.kubernetes.io/version: latest-jvm
   name: startpunkt-cluster-role-binding
-  namespace: default
+  namespace: startpunkt
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
@@ -553,7 +573,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: startpunkt
-    namespace: default
+    namespace: startpunkt
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -566,7 +586,7 @@ metadata:
     app.kubernetes.io/part-of: startpunkt
     app.kubernetes.io/managed-by: quarkus
   name: startpunkt
-  namespace: default
+  namespace: startpunkt
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
@@ -574,14 +594,14 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: startpunkt
-    namespace: default
+    namespace: startpunkt
 ---
 # Backend Service
 apiVersion: v1
 kind: Service
 metadata:
   name: startpunkt-backend
-  namespace: default
+  namespace: startpunkt
   labels:
     app.kubernetes.io/name: startpunkt-backend
     app.kubernetes.io/part-of: startpunkt
@@ -601,7 +621,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: startpunkt-backend
-  namespace: default
+  namespace: startpunkt
   labels:
     app.kubernetes.io/name: startpunkt-backend
     app.kubernetes.io/part-of: startpunkt
@@ -631,7 +651,7 @@ spec:
       serviceAccountName: startpunkt
       containers:
       - name: backend
-        image: ghcr.io/ullbergm/startpunkt-backend:latest
+        image: ghcr.io/ullbergm/startpunkt-backend:main
         imagePullPolicy: Always
         ports:
         - containerPort: 8081
@@ -690,7 +710,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: startpunkt-frontend
-  namespace: default
+  namespace: startpunkt
   labels:
     app.kubernetes.io/name: startpunkt-frontend
     app.kubernetes.io/part-of: startpunkt
@@ -710,7 +730,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: startpunkt-frontend
-  namespace: default
+  namespace: startpunkt
   labels:
     app.kubernetes.io/name: startpunkt-frontend
     app.kubernetes.io/part-of: startpunkt
@@ -727,9 +747,13 @@ spec:
         app.kubernetes.io/part-of: startpunkt
         app.kubernetes.io/component: frontend
     spec:
+      serviceAccountName: startpunkt
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
       containers:
       - name: frontend
-        image: ghcr.io/ullbergm/startpunkt-frontend:latest
+        image: ghcr.io/ullbergm/startpunkt-frontend:main
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -769,7 +793,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: startpunkt
-  namespace: default
+  namespace: startpunkt
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
