--- a/src/main/docker/nginx.conf
+++ b/src/main/docker/nginx.conf
@@ -1,3 +1,9 @@
+# Map for WebSocket upgrade
+map ${DOLLAR}http_upgrade ${DOLLAR}connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
     listen 8080;
     server_name _;
@@ -17,7 +23,7 @@ server {
         try_files ${DOLLAR}uri =404;
     }
 
-    # Proxy GraphQL requests to backend
+    # Proxy GraphQL requests to backend (including WebSocket subscriptions)
     location /graphql {
         proxy_pass ${API_BASE_URL}/graphql;
         proxy_http_version 1.1;
@@ -26,6 +32,14 @@ server {
         proxy_set_header X-Forwarded-For ${DOLLAR}proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
         proxy_set_header Content-Type application/json;
+
+        # WebSocket support for GraphQL subscriptions
+        proxy_set_header Upgrade ${DOLLAR}http_upgrade;
+        proxy_set_header Connection ${DOLLAR}connection_upgrade;
+
+        # WebSocket timeout configuration
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
 
         # CORS headers are handled by backend
         proxy_pass_request_headers on;
