--- a/deploy/kubernetes/startpunkt-microservices.yaml
+++ b/deploy/kubernetes/startpunkt-microservices.yaml
@@ -662,6 +662,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: SMALLRYE_CONFIG_LOCATIONS
+          value: /deployments/config
         livenessProbe:
           httpGet:
             path: /q/health/live
